[package]
name = "transportations_library"
version = "0.1.0"
authors = ["Rei Tamaru <tamaru@wisc.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
round = "0.1.0"

[lib]
name = "transportations_library"
path = "src/lib.rs"