[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "transportations_library"
dynamic = ["version"]
description = "CrossTraffic transportations library"
authors = [
    { name="raynbowy23" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-cov",
]

[tool.maturin]
features = ["pybindings"]
module-name = "transportations_library"

[project.urls]
Homepage = "https://github.com/crosstraffic/transportations_library"
